spatie pdf command teste, controller, fix start.sh, add jobs e migrations e bibliotecas scout
